--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     image: mongo:4.2
     volumes:
       - mongo_data:/data/db
+    logging:
+      options:
+        max-size: 1024m
   # Elasticsearch: https://www.elastic.co/guide/en/elasticsearch/reference/7.10/docker.html
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
@@ -21,6 +24,9 @@ services:
         soft: -1
         hard: -1
     mem_limit: 1g
+    logging:
+      options:
+        max-size: 1024m
   # Graylog: https://hub.docker.com/r/graylog/graylog/
   graylog:
   #change graylog tag to match version you need to use
@@ -59,6 +65,9 @@ services:
       # custom port from Network Devices , add more port below
       - 51499:51499
       - 51499:51499/udp
+    logging:
+      options:
+        max-size: 1024m
 # Volumes for persisting data, see https://docs.docker.com/engine/admin/volumes/volumes/
 volumes:
   mongo_data:
